ks8/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce-backend
  template:
    metadata:
      labels:
        app: ecommerce-backend
    spec:
      containers:
      - name: backend
        image: rishabhacr07.azurecr.io/ecommerce-backend:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-backend
spec:
  type: ClusterIP
  selector:
    app: ecommerce-backend
  ports:
  - port: 3000
    targetPort: 3000
