ks8/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce-frontend
  template:
    metadata:
      labels:
        app: ecommerce-frontend
    spec:
      containers:
      - name: frontend
        image: rishabhacr07.azurecr.io/frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-frontend
spec:
  type: ClusterIP
  selector:
    app: ecommerce-frontend
  ports:
    - port: 80
      targetPort: 80
