ks8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  annotations:
    appgw.ingress.kubernetes.io/backend-port: "30007"   # keep this
spec:
  ingressClassName: azure-application-gateway   # only this (NO annotation)
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecommerce-frontend
                port:
                  number: 80
